syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

option go_package = "pb";

service UserService {
}

message User {
		string id = 1;
		string username = 2;
		string password = 3;
		uint32 state = 4;
        google.protobuf.Timestamp created_at = 5;
		google.protobuf.Timestamp updated_at = 6;
}

message GetUser {
	User user = 1;
}

message ListUser {
		repeated User user = 1;
}
